Replace new URL() with URI.create()
new URL() is deprecated starting Java 20