@@ -54,7 +54,7 @@ public class BuypassAcmeProvider extends AbstractAcmeProvider {
         }
 
         try {
-            return new URL(directoryUrl);
+            return URI.create(directoryUrl).toURL();
         } catch (MalformedURLException ex) {
             throw new AcmeProtocolException(directoryUrl, ex);
         }
