@@ -56,7 +56,7 @@ public class GoogleAcmeProvider extends AbstractAcmeProvider {
         }
 
         try {
-            return new URL(directoryUrl);
+            return URI.create(directoryUrl).toURL();
         } catch (MalformedURLException ex) {
             throw new AcmeProtocolException(directoryUrl, ex);
         }
