@@ -66,7 +66,7 @@ public class SslComAcmeProvider extends AbstractAcmeProvider {
         }
 
         try {
-            return new URL(directoryUrl);
+            return URI.create(directoryUrl).toURL();
         } catch (MalformedURLException ex) {
             throw new AcmeProtocolException(directoryUrl, ex);
         }
